<resources>
    <string name="app_name">MyDiabetics- Dzienniczek</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="noAccountYet">Nie masz jescze konta? Utwórz konto</string>
    <string name="createOne">Utwórz konto</string>
    <string name="surname">Nazwisko</string>
    <string name="alreadyAMemberLogin">Masz juz konto? Zaloguj się</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="forgotPassword">Zapomniałeś/aś hasła?</string>
    <string name="or">LUB</string>
    <string name="signIn">Logowanie</string>
    <string name="signUp">Rejestracja</string>
    <string name="googleIcon">google icon</string>
    <string name="facebookIcon">facebook icon</string>
    <string name="topIcon">faaaaaa</string>
    <string name="checking">Sprawdzanie</string>
    <string name="name">Imie</string>
    <string name="email">Email</string>
    <string name="changePassword">Zmiana Hasła</string>
    <string name="changePassword2">Zmień Hasło</string>
    <string name="repeatPassword">Powtórz Hasło</string>
    <string name="newPassword">Nowe Hasło</string>
    <string name="profile">Profil</string>
    <string name="settings">Ustawienia</string>
    <string name="info">Informacje</string>
    <string name="help">Pomoc</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="glucozeCalc">Przelicznik cukru</string>
    <string name="descritpionCalc">Wprowadź wartość mg/dl(miligram na decylitr) lub mmol/l (milimol na litr) aby przeliczyć jednostki.</string>
    <string name="mg_dll">mg/dll</string>
    <string name="mmol_l">mmol/l</string>
    <string name="discribeForgotPassword">Wprowadź adres email twojego konta na który wyślemy link do zamiany hasła.</string>
    <string name="title_activity_navigation_header">NavigationHeader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="completed_data">Uzupełnianie danych</string>
    <string name="complete_data">Uzupełnij dane</string>
    <string name="remainders">Przypomnienia</string>
    <string name="notes">Notatki</string>
    <string name="createRemainders">Kliknij w przycisk aby utworzyć przypomnienie.</string>
    <string name="createNotes">Kliknij w przycisk aby utworzyć notatke.</string>
    <string name="writeNoteTitle">Wpisz tytuł notatki</string>
    <string name="writeNoteDetails">Wpisz opis notatki</string>
</resources>
