<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item android:id="@+id/menuProfile"
       android:icon="@drawable/icon_male"
       android:title="@string/profile"/>



    <item android:title="Inne">

        <menu>

            <item android:id="@+id/menuCalc"
                android:icon="@drawable/icon_calc"
                android:title="@string/glucozeCalc"/>

            <item android:id="@+id/menuSettings"
                android:icon="@drawable/icon_settings"
                android:title="@string/settings"/>

            <item android:id="@+id/menuSupport"
                android:icon="@drawable/icon_support"
                android:title="@string/help"/>

            <item android:id="@+id/menuInfo"
                android:icon="@drawable/icon_info"
                android:title="@string/info"/>

        </menu>



    </item>




</menu>