<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Java.Activity.CalcFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/mg_dll"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/round_border"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:hint="@string/mg_dll"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/mmol_l"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/round_border"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:hint="@string/mmol_l"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toEndOf="@+id/mg_dll"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/descritpionCalc"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>